# dzd-omop-cdm-python-models

./: .gitignore  LICENSE  README.md  README_codegen.md  cdm_source.db-journal  dev_notes.md  docker-compose.yaml  dockerfile  rec.py  reqs_gen.txt  run_codegen.sh  test.py
.github/workflows/: publish-pypi.org.yaml
DZDOMOPModel/: README.md  cdm_source.db  pyproject.toml
DZDOMOPModel/OMOPModel/: OMOP_5_3_dataclasses.py  OMOP_5_3_declarative.py  OMOP_5_3_sqlmodels.py  OMOP_5_4_dataclasses.py  OMOP_5_4_declarative.py  OMOP_5_4_sqlmodels.py  OMOP_CDM_5.3_dataclasses.py  OMOP_CDM_5.3_tables.py  OMOP_CDM_5.4_sqlmodels.py
DZDOMOPModel/examples/: postgresql_create_omop_schema_and_load_vocab.py  sqlite_create_omop_schema_and_load_vocab.py  sqlite_insert_person.py  sqlite_insert_person_sqlmodel_wip.py
DZDOMOPModel/omopmodel/: OMOP_5_3_dataclasses.py  OMOP_5_3_declarative.py  OMOP_5_3_sqlmodels.py  OMOP_5_3_tables.py  OMOP_5_4_dataclasses.py  OMOP_5_4_declarative.py  OMOP_5_4_sqlmodels.py  OMOP_5_4_tables.py  __init__.py  vocabularies_loader.py  vocabulary_loader.py
OMOPModel/: OMOP_CDM_5.3_declarative.py  OMOP_CDM_5.3_sqlmodels.py  OMOP_CDM_5.4_dataclasses.py  OMOP_CDM_5.4_declarative.py  OMOP_CDM_5.4_tables.py
OMOPSQLModelGen/: config.py  generator.py  main.py  omop_cdm_release_downloader.py  pre_generation_processes.py  reference_database_handler.py  sources.py
OMOPSQLModelGen/post_processing_funcs/: add_license.py  add_pural_names_to_back_populating_lists.py  fix_death_table_glitch.py  fix_sql_model.py  remove_backpopulating_lists.py  remove_excessive_backpopulate.py  remove_reverse_1to1.py  rename_table_vars.py  replace_temp_pk_with_candidate_keys.py
OMOPSQLModelGen/pre_gen_sql/5.3/: add_missing_primary_keys.sql
OMOPSQLModelGen/pre_gen_sql/5.4/: add_missing_primary_keys.sql
OMOPSQLModelGen/pre_gen_sql/5.x/: add_missing_primary_keys.sql
