[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
[tool.setuptools-git-versioning]
enabled = true
[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
root = "../"
[project]
name = "dzdomop"
authors = [{ name = "Tim Bleimehl", email = "bleimehl@helmholtz-munich.de" }]
description = "A Python ORM/data classes representation of the OMOP Common Data Model in different flavors powered by sqlacodegen"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["DZD", "OMOP"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["sqlmodel", "sqlalchemy"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "deepdiff"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-autorefs", "mkdocs-material"]
[project.urls]
Source = "https://github.com/DZD-eV-Diabetes-Research/dzd-omop-cdm-python-models"
Issues = "https://github.com/DZD-eV-Diabetes-Research/dzd-omop-cdm-python-models/issues"
